# metareason-core

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  test_balance_stats.py
docs/: ROADMAP.md  adapters.md  architecture.md  blog-source-launch.md  metareason_sequence_diagram.md  oracles.md  templating-guide.md  yaml-configuration-schema.md
docs/plans/: auto-calibration.md
examples/: README.md  adapter_demo.py  advanced_evaluation.yaml  ambiguous_calibration.yml  auto_calibration.yml  base_config.yaml  bayesian_analysis_example.py  bayesian_config_example.yaml  environment_demo.yaml  google_quickstart.yaml  judge_calibration.yml  judge_calibration_with_files.yml  load_config_demo.py  local_ollama_evaluation.yaml  multi_judge_calibration.yml  multi_judge_ollama.yml  ollama_quickstart.yaml  parameter_effects_test.yml  pipeline_demo.yaml  quantum_entanglement_eval.yml  quick_calibration.yml  quick_test.yml  shared_oracles.yaml  simple_evaluation.yaml  variance_calibration.yml
examples/fixtures/: sample_prompt.txt  sample_response.txt
examples/schemas/: basic_response.json  binary_classification.json  detailed_analysis.json  multi_dimensional.json
notebooks/: lhs.ipynb
scripts/: clean.sh  format.sh  setup-dev.sh  test.sh  test_adapters.py  verify_parameter_effects.py
src/metareason/: __init__.py
src/metareason/adapters/: __init__.py  adapter_base.py  adapter_factory.py  anthropic.py  base.py  google.py  http_base.py  local_config.py  ollama.py  openai.py  privacy.py  registry.py  schema_utils.py
src/metareason/analysis/: __init__.py  agreement.py  analyzer.py  bayesian.py
src/metareason/calibration/: __init__.py  convergence.py  loop.py  optimizer.py
src/metareason/cli/: __init__.py  config.py  main.py  templates.py  utils.py
src/metareason/config/: __init__.py  adapters.py  axes.py  cache.py  distributions.py  environment.py  includes.py  loader.py  models.py  oracles.py  sampling.py  statistical.py  validator.py
src/metareason/oracles/: __init__.py  base.py  embedding_similarity.py  judge_response.py  llm_judge.py  oracle_base.py  quality_assurance.py  regex_oracle.py
src/metareason/pipeline/: __init__.py  executor.py  loader.py  models.py  renderer.py  runner.py
src/metareason/reporting/: __init__.py  calibration_report.py  multi_judge_report.py  report_generator.py  visualizations.py
src/metareason/reporting/templates/: base.html.j2  calibration_report.html.j2  multi_judge_report.html.j2  report.html.j2
src/metareason/results/: __init__.py  exporter.py  formatter.py
src/metareason/sampling/: __init__.py  base.py  factory.py  lhs.py  lhs_sampler.py  metrics.py  optimization.py  utils.py
src/metareason/storage/: __init__.py  store.py
src/metareason/templates/: __init__.py  engine.py  filters.py  integration.py  renderer.py  validator.py
src/metareason/utils/: __init__.py
src/metareason/visualization/: __init__.py  plots.py
test_suite/: results.json  test.yml
test_suite/examples/: test.yml  test_100_samples.yml
tests/: __init__.py  conftest.py  test_adapter_exports.py  test_adapter_schema_integration.py  test_adapters.py  test_adapters_base.py  test_adapters_config.py  test_adapters_google.py  test_adapters_http_base.py  test_adapters_integration.py  test_adapters_local_config.py  test_adapters_ollama.py  test_adapters_privacy.py  test_adapters_registry.py  test_agreement.py  test_analysis_bayesian.py  test_analyzer.py  test_auto_calibration.py  test_calibration_report.py  test_cli.py  test_cli_config.py  test_cli_main.py  test_cli_templates_simple.py  test_cli_utils.py  test_config.py  test_config_cache.py  test_config_environment.py  test_config_includes.py  test_config_loader.py  test_config_validation.py  test_dependencies.py  test_enhanced_loader.py  test_infrastructure_validation.py  test_lhs_sampler.py  test_loader_file_refs.py  test_metrics_comprehensive.py  test_multi_judge_report.py  test_oracles.py  test_oracles_embedding_similarity.py  test_oracles_judge_response.py  (+21 more)
tests/factories/: __init__.py  evaluation_factory.py
tests/fixtures/: __init__.py  config_builders.py
tests/helpers/: __init__.py  schema_migration.py
